# offline-voice-assistant

./: .version  CMakeLists.txt  README.md
offline-voice-assistant/: main.py  requirements.txt
offline-voice-assistant/assistant/: __init__.py  core.py
offline-voice-assistant/tests/: test_core.py
src/: command_processor.cpp  command_processor.h  main.cpp  voice_recognition.cpp  voice_recognition.h
tests/: test_command_processor.cpp
